# django-docker-template

./: .gitignore  README.md  docker-compose--ci.yml  docker-compose--local.yml  docker-compose.yml  tusk.yml
.github/workflows/: check-backend.yml  deploy-app.yml
backend/: .devcontainer.json  .gitignore  Dockerfile  docker-compose--devcontainer.yml  entrypoint.sh  pyproject.toml  tusk.yml
backend/entrypoint.d/: README.md
backend/src/: manage.py
backend/src/project/: asgi.py  settings.py  wsgi.py
backend/src/project/settings/: __init__.py
backend/src/project/settings/core/: __init__.py  assets.py  base.py  i18n.py  security.py
backend/tools/: get-poetry.py
tools/docker/: docker-compose--ci.yml  docker-compose--local.yml  docker-compose.yml
